wip fix libusb for linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ SET(IS_WINDOWS OFF)
 IF(WIN32)
     SET(IS_WINDOWS ON)
 ENDIF()
-VERBOSE_OPTION(USE_HIDAPI "Use HIDAPI instead of libusb" ${IS_WINDOWS})
+VERBOSE_OPTION(USE_HIDAPI "Use HIDAPI instead of libusb" OFF)
 VERBOSE_OPTION(USE_ASAN "Use address sanitizer" OFF)
 VERBOSE_OPTION(USE_MSAN "Use memory sanitizer" OFF)
 VERBOSE_OPTION(ENABLE_TESTS "Enable build / execution of tests" OFF)
