--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/cnkalman"]
 	path = libs/cnkalman
-	url = ../../cntools/cnkalman.git
+	url = https://github.com/cntools/cnkalman.git
